--- a/sea_scrach.ipynb
+++ b/sea_scrach.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "06b4767b",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,6 @@
     "    OPTICAL_INPUT_POWER_DBM = \"Optical_Input_Power_dBm\"\n",
     "    SWITCH_LIFETIME_CYCLES = \"Switch_Lifetime_dB\"\n",
     "    RACK_WIDTH_INCHES = \"Rack_Width_Inches\"\n",
-    "    INTERFACES = \"Interfaces\"\n",
     "    \n",
     "    REQTYPE_FUNCTIONAL = \"Functional\"\n",
     "    REQTYPE_PERFORMANCE = \"Performance\"\n",
@@ -130,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "id": "56fe0fd1",
    "metadata": {},
    "outputs": [
@@ -138,7 +137,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['MATRIX_SIZE', 'CORE_TECH', 'INTERFACES', 'OPTIONAL_FEATURES', 'OPTICAL_TYPE', 'MAX_IL_DB', 'MAX_RL_DB', 'MAX_SWITCHING_TIME_MS', 'CONNECTION_STABILITY', 'WAVELENGTH_RANGE_NM']\n"
+      "['MATRIX_SIZE', 'CORE_TECH', 'INTERFACES', 'OPTIONAL_FEATURES', 'OPTICAL_TYPE', 'MAX_IL_DB', 'MAX_RL_DB', 'MAX_SWITCHING_TIME_MS', 'CONNECTION_STABILITY_DB', 'WAVELENGTH_RANGE_NM', 'LATENCY_NS', 'WDL_DB', 'PDL_DB', 'CROSSTALK_DB', 'OPTICAL_INPUT_POWER_DBM', 'SWITCH_LIFETIME_CYCLES', 'RACK_WIDTH_INCHES', 'REQTYPE_FUNCTIONAL', 'REQTYPE_PERFORMANCE', 'REQTYPE_INTERFACE', 'REQTYPE_RELIABILITY', 'REQTYPE_MAINTAINABILITY', 'REQTYPE_SAFETY', 'REQTYPE_SECURITY', 'REQTYPE_OTHER', 'CTRL_INTERFACES', 'POWER_SUPPLY', 'VERIFICATION_METHOD_ANALYSIS', 'VERIFICATION_METHOD_DEMONSTRATION', 'VERIFICATION_METHOD_INSPECTION', 'VERIFICATION_METHOD_TEST']\n"
      ]
     }
    ],
@@ -156,7 +155,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "ba45283c",
    "metadata": {},
    "outputs": [
@@ -214,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "id": "56c45f6e",
    "metadata": {},
    "outputs": [
@@ -413,7 +412,7 @@
        "  'validated_by': []}]"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
